--- a/ufo-parser/pom.xml
+++ b/ufo-parser/pom.xml
@@ -14,9 +14,16 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!--  
     <dependency>
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+  	</dependency>
+  	-->
+  	<dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-app</artifactId>
       <version>2.0.0-SNAPSHOT</version>
   	</dependency>
   	<dependency>
